tests/error_corpus/validation_errors/not_implemented/E348_missing_overlap_end.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child, MOT Mother
@ID:	eng|corpus|CHI|||||Target_Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Expected error: E348 (Missing overlap end)
@Comment:	Trigger: Overlap begin marker without matching end
*CHI:	hello ⌈ world .
*MOT:	yes .
@End
